# DOVE

./: .gitignore  .pre-commit-config.yaml  .ravenconfig.xml  CHANGELOG.md  NOTICE.txt  README.md  __init__.py  dependencies.xml  pyproject.toml  pytest.ini  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: bump-version.yml  deploy-docs.yml  release.yml  run-tests.yml
coverage_scripts/: check_py_coverage.sh  initialize_coverage.sh  report_py_coverage.sh
docs/source/: conf.py  examples.md  index.md  intro.md  models.md
docs/source/api/: dove.core.rst  dove.models.price_taker.rst  dove.models.rst  dove.rst
docs/source/getting-started/: install.md  intro.md  quick-start.md
docs/source/references/: developer.md
docs/source/user-guide/: examples.md  models.md  system.md
dove/: __init__.py  components.py  utils.py
dove/Dispatch/: Dispatcher.py  Factory.py  PyomoModelHandler.py  PyomoRuleLibrary.py  __init__.py  custom.py  putils.py  pyomo_dispatch.py  pyomo_rule_library.py  twin_pyomo_limited_ramp.py  twin_pyomo_test_rte.py
dove/dispatch/: __init__.py  dispatch_state.py  factory.py  putils.py  pyomo_dispatch.py  pyomo_model_handler.py
dove/economics/: __init__.py  cashflow.py  cashflowgroup.py
dove/interactions/: __init__.py  demanding.py  demands.py  interaction.py  produces.py  producing.py  stores.py  storing.py
dove/physics/: __init__.py  factory.py  polynomial.py  ratio.py  transfer.py
dovespecs/: __init__.py  autospec.py  component_spec.py  demand_spec.py  descriptions.py  economics_spec.py  interaction_spec.py  producer_spec.py  simple_spec.py  storage_spec.py  transfer_spec.py
dovespecs/special/: __init__.py  capacity_factor_spec.py  capacity_spec.py  driver_spec.py  initial_stored_spec.py  minimum_spec.py  ref_driver_spec.py  ref_price_spec.py  registry.py  scaling_factor_spec.py  strategy_spec.py
examples/: capacity_factor_example.py  check_constraints_working.py  co2_side_effect_example.py  ev_example.py  ies_utilization_test.py  minimize_cost_of_production_test.py  minimums_example.py  multimarket_example.py  ramping_test.py  simple_demo.csv  simple_demonstration.py  storage_limits.py  storage_test.py  transfer_example.py  variable_inputs_test.py
src/: Base.py  Components.py  DispatchPlot.py  __init__.py  _utils.py
src/Dispatch/: CustomDispatcher.py  DispatchState.py  Dispatcher.py  Factory.py  PyomoModelHandler.py  PyomoRuleLibrary.py  __init__.py  putils.py  pyomo_dispatch.py  twin_pyomo_limited_ramp.py  twin_pyomo_test.py  twin_pyomo_test_ch_disch.py  twin_pyomo_test_rte.py
src/Economics/: CashFlow.py  CashFlowGroup.py  __init__.py
src/Interactions/: Demand.py  Interaction.py  Producer.py  Storage.py  __init__.py
src/TransferFuncs/: Factory.py  Polynomial.py  Ratio.py  TransferFunc.py  __init__.py
src/dove/: __init__.py  components.py  pyomo_model_builder.py  storage_test.py  system.py  test.py
src/dove/core/: __init__.py  cashflow.py  components.py  resource.py  system.py  transfers.py
src/dove/models/: __init__.py  base.py
src/dove/models/price_taker/: __init__.py  builder.py  rulelib.py
tests/: __init__.py
tests/integration/: test_basic_economics.py
tests/pyomo_tests/: twin_pyomo_limited_ramp.py  twin_pyomo_test.py  twin_pyomo_test_ch_disch.py  twin_pyomo_test_rte.py
tests/unit/: test_cashflow.py  test_components.py  test_system.py  test_transfers.py
tests/unit/models/price_taker/: test_builder.py
tests/unit_tests/: __init__.py  resolve_module_path.py  test_cashflow.py  test_cashflowgroup.py  test_components.py  test_interaction.py  tests
tests/unit_tests/Dispatch/: __init__.py  test_pyomo_model_handler.py  test_pyomomodelhandler.py  tests
tests/unit_tests/Economics/: test_cashflow.py  test_cashflowgroup.py  tests
tests/unit_tests/Interactions/: test_interaction.py  tests
tests/unit_tests/TransferFuncs/: test_transferfunc.py  tests
tests/unit_tests/physics/: test_transfer.py  tests
