[project]
name = "dove"
version = "0.1.0"
description = "An extensible Python library for modeling multi-commodity dispatch of energy systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dylan McDowell", email = "dylan.mcdowell@inl.gov" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
 ]


dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyomo>=6.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "D1"]
ignore = ["E402", "E501", "W505"]

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-ra -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
]

